bugfix: Change prefers-contrast to "more"

--- a/stylesheets/base/_reset.scss
+++ b/stylesheets/base/_reset.scss
@@ -22,7 +22,7 @@
 }
 
 /* Sharp contrast */
-@media (prefers-contrast: high) {
+@media (prefers-contrast: more) {
   :root {
     --black: #000000;
     --white: #ffffff;
