--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -12,7 +12,7 @@
 
 /* Dark mode */
 /* Sharp contrast */
-@media (prefers-contrast: high) {
+@media (prefers-contrast: more) {
   :root {
     --black: #000000;
     --white: #ffffff;
